@@ -16,7 +16,7 @@ API_VERSION=46
 LIB_PATCHLEVEL=0
 
 dnl libout123
-OUTAPI_VERSION=3
+OUTAPI_VERSION=4
 OUTLIB_PATCHLEVEL=0
 
 dnl libsyn123
